Wed Jan 14 10:39:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* stable/ext/socket/socket.c (NI_MAXHOST, NI_MAXSERV): fixed invalid
	  preprocessor directives.  a patch from Peter Bowen at
	  [ruby-core:18211].

Tue Jan 13 04:40:30 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (login): raise FTPReplyError if passwd or acct
	  is not supplied.  backported from trunk.  fixed [ruby-core:18058].

Mon Jan 12 00:23:37 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (gc_sweep, obj_free, run_final): defer finalizers of IO and
	  Data.  [ruby-dev:35578]

	* gc.c (rb_gc_call_finalizer_at_exit): self-referencing finalizers
	  cannot be invoked.  [ruby-dev:35681]

Sun Jan 11 11:33:27 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (chdir): handle 5xx errors correctly.
	  backported from trunk.  fixed [ruby-core:18057].

Fri Jan  9 19:25:25 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (disconnect): do not refer SSL::SSLSocket for
	  environments without OpenSSL.  backported from trunk.
	  fixed [ruby-dev:35755].

Thu Jan  8 13:24:23 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (deferred_nodes, compstmt, arg, fixup_nodes, range_op): fix
	  up fixnum range literal in conditional as automagical line number
	  comparison.  [ruby-core:12124], [ruby-dev:35731]

Wed Jan  7 10:09:46 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (timeofday): use monotonic clock.  based on a patch
	  from zimbatm <zimbatm@oree.ch> in [ruby-core:16627].

Tue Jan  6 09:03:35 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (yylex): 8 and 9 in octal integer should cause compile
	  error.  [ruby-dev:35729]

Mon Jan  5 11:14:39 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_thread_schedule): runs deferred finalizers.

	* gc.c (gc_sweep): sets rb_thread_pending to run deferred finalizers.

	* rubysig.h (CHECK_INTS): now checks rb_thread_pending even on
	  platforms where setitimer is not available.  [ruby-core:18045]